--- a/practica1.html
+++ b/practica1.html
@@ -7,6 +7,19 @@
 	<link rel="stylesheet" href="./css/estilos1.css" />
 	<script src="js/vendor/modernizr.js"></script>
 
+	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
+	<script>
+		$( "#showr" ).click(function() {
+		  $( "div" ).first().show( "fast", function showNext() {
+		    $( this ).next( "div" ).show( "fast", showNext );
+		  });
+		});
+		 
+		$( "#hidr" ).click(function() {
+		  $( "div" ).hide( 1000 );
+		});
+	</script>
 
 	<script>
 
@@ -278,8 +291,10 @@ window.onload = function(){/*hace que se cargue la función lo que predetermina 
 		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:101;">
 		</div>
 		<div id="divStart" class="divStartCls">
-			<div style="z-index:1; position: absolute; color:white; font-size:50px;">
-				Aqui Instrucciones<br>By Puddul.
+			<div style="z-index:1; position: absolute; color:white; font-size:50px; text-align:center;">
+				<FONT FACE="arial">
+					Aqui Instrucciones.
+				</FONT>
 			</div>
 			<div style="z-index:2; position: absolute; padding-top:300px; padding-left:260px;">
 				<img src="./img/boton.png" width="180" height="80" onClick="eliminarIntro(); ponerAncho(); generarNumeros(); iniciarF(); timerSup();" onLoad="doLoad();">
@@ -313,5 +328,28 @@ window.onload = function(){/*hace que se cargue la función lo que predetermina 
 			<img src="./img/fondo.png" width="700" height="480">
 		</div>
 	</div>
+
+
+
+<button id="showr">Show</button>
+<button id="hidr">Hide</button>
+
+<div style="background: #def3ca;
+    margin: 3px;
+    width: 80px;
+    display: none;
+    float: left;
+    text-align: center; ">
+
+	<div>Hello 3,</div>
+	<div>how</div>
+	<div>are</div>
+	<div>you?</div>
+</div>
+
+
+
+
+
 </body>
 </html>
