--- a/practica2.html
+++ b/practica2.html
@@ -219,6 +219,9 @@ function generarNumeros() {//genera los numeros a buscar del usuario
 function eliminarIntro(){//elimina el div intro
 	elemento=document.getElementById('divStart');
 	elemento.parentNode.removeChild(elemento);
+
+	elemento=document.getElementById('divStart2');
+	elemento.parentNode.removeChild(elemento);
 }
 function AgregarLineaDeTexto(TextoLinea, divAgregar) {//mandas el Texto y el numero del Div al que va a modifical el usuario
 	document.getElementById("textoDiv" + divAgregar).innerHTML +=  TextoLinea;// Agrego nueva linea antes
@@ -265,14 +268,22 @@ function getPuntuacion(){//Obtienes la Puntuacion
 
 </head>	
 <body>
-	<div style="width:700px; height:480px; max-width:700px; max-height:480px;">
-		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:101;">
+	<div style="width:700px; height:480px; max-width:700px; max-height:480px; font-family: DFPOP1-W9;">
+		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:500;">
 		</div>
 		<div id="divStart" class="divStartCls">
-			<div style="z-index:1; position: absolute; color:white; font-size:50px;">
-				Aqui Instrucciones<br>By Puddul.
+		</div>
+		<div id="divStart2" class="JuegoTextoCls" style="z-index: 101;">
+			<div style="z-index:1; position: absolute; color:white; font-size: 20px;" align="center">
+				<div style="padding-top: 0px;">
+					<font size="30px"<b>¿Listo para jugar?</b></font><br>
+					Es muy fácil, solo tienes que ver los números que aparecen arriba, pero velos rápido, ¡POR QUE DESAPARECERAN! ¡Tienes que memorizarlos rápido y escribirlos! 
+					Cada vez que escribas los números correctamente pasaras de nivel, ¡cada nivel vale 3 puntos! Si te equivocas perderás tu progreso
+					<img src="./img/teclado.png" width="700" height="180" style="padding-top:10px;">
+
+				</div>
 			</div>
-			<div style="z-index:2; position: absolute; padding-top:300px; padding-left:260px;">
+			<div style="z-index:2; position: absolute; padding-top:380px; padding-left:260px;">
 				<img src="./img/boton.png" width="180" height="80" onClick="eliminarIntro(); ponerAncho(); generarNumeros(); iniciarF(); timerSup();" onLoad="doLoad();">
 			</div>
 		</div>
@@ -296,8 +307,12 @@ function getPuntuacion(){//Obtienes la Puntuacion
 		</div>
 		<div id="Mensaje" style="font-size:33px; font-weight:bold; z-index:3;padding-top:190px; position:absolute; width:700px;" align="center"></div>
 
-		<img src="./img/Puntuacion.png" width="180" height="45" style="z-index: 3;padding-left: 400px; margin-top: 430px; position: absolute;">
-		<div id="puntuacion" style="z-index: 99;padding-left: 620px; margin-top: 420px; position: absolute; font-size: 50px;">0</div>
+		<div style="z-index: 3;padding-left: 320px; margin-top: 420px; position: absolute; font-size:50px;">
+			Puntuaci&oacute;n:
+		</div>
+		<div id="puntuacion" style="z-index: 99;padding-left: 620px; margin-top: 420px; position: absolute; font-size: 50px;">
+			0
+		</div>
 		<div class="JuegoTextoCls" style="z-index:0;">
 			<img src="./img/fondo.png" width="700" height="480">
 		</div>
