--- a/practica2.html
+++ b/practica2.html
@@ -268,18 +268,19 @@ function getPuntuacion(){//Obtienes la Puntuacion
 
 </head>	
 <body>
-	<div style="width:700px; height:480px; max-width:700px; max-height:480px; font-family: DFPOP1-W9;">
+	<div style="width:700px; height:480px; max-width:700px; max-height:480px; font-family: DFPOP1-W9;"><!-- Chinacat  DFPOP1-W9-->
 		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:500;">
 		</div>
 		<div id="divStart" class="divStartCls">
 		</div>
 		<div id="divStart2" class="JuegoTextoCls" style="z-index: 101;">
 			<div style="z-index:1; position: absolute; color:white; font-size: 20px;" align="center">
-				<div style="padding-top: 0px;">
-					<font size="30px"<b>¿Listo para jugar?</b></font><br>
-					Es muy fácil, solo tienes que ver los números que aparecen arriba, pero velos rápido, ¡POR QUE DESAPARECERAN! ¡Tienes que memorizarlos rápido y escribirlos! 
-					Cada vez que escribas los números correctamente pasaras de nivel, ¡cada nivel vale 3 puntos! Si te equivocas perderás tu progreso
-					<img src="./img/teclado.png" width="700" height="180" style="padding-top:10px;">
+				<div style="padding-top: 10px;">
+					<font size="30px"><b>¿Listo para jugar?</b></font><br>
+					Es muy fácil, solo tienes que ver los números que aparecen arriba, ¡Tienes que memorizarlos rápido y escribirlos! ¡PORQUE DESAPARECEN!
+					Cada vez que escribas los números correctamente pasaras de nivel, ¡cada nivel vale 3 puntos! Si te equivocas perderás tu progreso.<BR>
+					¡EMPEZEMOS! 
+					<img src="./img/teclado.png" width="700" height="180" style="padding-top:25px;">
 
 				</div>
 			</div>
@@ -307,10 +308,10 @@ function getPuntuacion(){//Obtienes la Puntuacion
 		</div>
 		<div id="Mensaje" style="font-size:33px; font-weight:bold; z-index:3;padding-top:190px; position:absolute; width:700px;" align="center"></div>
 
-		<div style="z-index: 3;padding-left: 320px; margin-top: 420px; position: absolute; font-size:50px;">
+		<div style="z-index: 3;padding-left: 320px; margin-top: 410px; position: absolute; font-size:50px;font-family: Chinacat;">
 			Puntuaci&oacute;n:
 		</div>
-		<div id="puntuacion" style="z-index: 99;padding-left: 620px; margin-top: 420px; position: absolute; font-size: 50px;">
+		<div id="puntuacion" style="z-index: 99;padding-left: 620px; margin-top: 420px; position: absolute; font-size: 50px;font-family: DFPOP1-W9;">
 			0
 		</div>
 		<div class="JuegoTextoCls" style="z-index:0;">
