--- a/practica1.html
+++ b/practica1.html
@@ -4,22 +4,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mental Tech</title>
-	<link rel="stylesheet" href="./css/estilos1.css" />
+	<link rel="stylesheet" href="./css/estilos.css" />
 	<script src="js/vendor/modernizr.js"></script>
 
-	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-
-	<script>
-		$( "#showr" ).click(function() {
-		  $( "div" ).first().show( "fast", function showNext() {
-		    $( this ).next( "div" ).show( "fast", showNext );
-		  });
-		});
-		 
-		$( "#hidr" ).click(function() {
-		  $( "div" ).hide( 1000 );
-		});
-	</script>
 
 	<script>
 
@@ -43,7 +30,7 @@ return true;
 return /\d/.test(String.fromCharCode(keynum));
 }
 */
-function keyListener(e){
+function keyListener(e){//Listeners!
 	if(iniciar == true){
 		if(!e){
 			e = window.event;
@@ -81,42 +68,35 @@ function keyListener(e){
 		if(e.keyCode == 82){
 			//limpiarDivNumeros();
 			//reIniciar();
-			muestra_oculta('textoDiv1');
+			//muestra_oculta('textoDiv1');
 		}
 	}
 }
-function iniciarF(){
+function iniciarF(){//solo de control, para que no pueda introducir numeros antes de precionar "jugar"
 	iniciar = true;
 }
 
-function agregarNumero(numero){
+function agregarNumero(numero){//busca el 1° div que este disponible
 	if(introducidos < nivel){
 		if(document.getElementById("textoDiv1").innerHTML == ""){
-			//alert("Div1 Vacio!");
 			AgregarLineaDeTexto(numero, "1");
 			introducidos++;
 		}else if(document.getElementById("textoDiv2").innerHTML == ""){
-			//alert("Div2 Vacio!");
 			AgregarLineaDeTexto(numero, "2");
 			introducidos++;
 		}else if(document.getElementById("textoDiv3").innerHTML == ""){
-			//alert("Div3 Vacio!");
 			AgregarLineaDeTexto(numero, "3");
 			introducidos++;
 		}else if(document.getElementById("textoDiv4").innerHTML == ""){
-			//alert("Div4 Vacio!");
 			AgregarLineaDeTexto(numero, "4");
 			introducidos++;
 		}else if(document.getElementById("textoDiv5").innerHTML == ""){
-			//alert("Div5 Vacio!");
 			AgregarLineaDeTexto(numero, "5");
 			introducidos++;
 		}else if(document.getElementById("textoDiv6").innerHTML == ""){
-			//alert("Div6 Vacio!");
 			AgregarLineaDeTexto(numero, "6");
 			introducidos++;
 		}else if(document.getElementById("textoDiv7").innerHTML == ""){
-			//alert("Div7 Vacio!");
 			AgregarLineaDeTexto(numero, "7");
 			introducidos++;
 		}
@@ -126,18 +106,16 @@ function agregarNumero(numero){
 	}
 }
 
-function checar(){
+function checar(){//ve si el usuario gano o perdio el nivel, checa todos los div usados
 	while(numChecar <= nivel){
 		var tmp1;
 		var tmp2;
-		//alert(document.getElementById("numeroDiv" + numChecar).innerHTML +"numeroDiv" + numChecar + " - " +document.getElementById("textoDiv" + numChecar).innerHTML + "textoDiv" + numChecar);
 		if(document.getElementById("numeroDiv" + numChecar).innerHTML == document.getElementById("textoDiv" + numChecar).innerHTML){
 			numChecar++;
 			ganoNivel = true;
 		}else{
 			ganoNivel = false;
 			msg = "(era un " + document.getElementById("numeroDiv" + numChecar).innerHTML + " en vez de " + document.getElementById("textoDiv" + numChecar).innerHTML + ")";
-			//alert(document.getElementById("numeroDiv" + numChecar).innerHTML + " --- " + document.getElementById("textoDiv" + numChecar).innerHTML);
 			break;
 		}
 	}
@@ -151,21 +129,21 @@ function checar(){
 	win = false;
 }
 
-function pasoNivel () {
+function pasoNivel () {//si el usuario gano el nivel
 	if(nivel < 7){
 		nivel++;
 	}
 	reIniciar(true);
-	cambiarPuntuacion(100);
+	cambiarPuntuacion(parseInt(getPuntuacion()) + 3);
 }
 
-function falloNivel(){
+function falloNivel(){//si el usuario perdio el nivel
 	nivel = 3;
 	cambiarPuntuacion(0);
 	reIniciar(false);
 }
 
-function reIniciar(win){
+function reIniciar(win){//re establece los div's para una nueva ronda
 	ponerNumero = 1;
 	anchoDiv = 1;
 	ocultarDiv();
@@ -175,12 +153,13 @@ function reIniciar(win){
 	mensaje(win, 1);
 	timerSup();
 }
-function mensaje(win , fromm){
+
+function mensaje(win , fromm){//Despliega si gano o perdio ese nivel
 	if(fromm == 1){
 		if(win){
 			document.getElementById("Mensaje").innerHTML =  "</b>Buen Trabajo!</b>";
 		}else{
-			document.getElementById("Mensaje").innerHTML =  "</b>Error! intentalo de nuevo!</b>" + msg;
+			document.getElementById("Mensaje").innerHTML =  "Error! intentalo de nuevo!" + msg;
 		}
 		setTimeout( "mensaje(true, 2)", 3500 );
 	}else{
@@ -188,7 +167,7 @@ function mensaje(win , fromm){
 	}
 }
 
-function limpiarDivNumeros(){
+function limpiarDivNumeros(){//elimina el contenido de todos los div
 	introducidos = 0;
 	document.getElementById("textoDiv1").innerHTML =  "";
 	document.getElementById("textoDiv2").innerHTML =  "";
@@ -207,7 +186,7 @@ function limpiarDivNumeros(){
 	document.getElementById("numeroDiv7").innerHTML =  "";
 }
 
-function ponerAncho(){
+function ponerAncho(){//muestra los div necesarios
 	if(anchoDiv <= nivel){
 		//document.getElementById("textoDiv" + anchoDiv) 
 		//.style.width="70px";
@@ -217,7 +196,7 @@ function ponerAncho(){
 	}
 }
 
-function ocultarDiv(){
+function ocultarDiv(){//oculta todos los div's
 	var ocultarActual = 1;
 	while(ocultarActual <= 7){
 		muestra_oculta("textoDiv" + ocultarActual, false);
@@ -226,7 +205,7 @@ function ocultarDiv(){
 	}
 }
 
-function generarNumeros() {
+function generarNumeros() {//genera los numeros a buscar del usuario
 	if(ponerNumero <= nivel){
 		//document.getElementById("numeroDiv" + ponerNumero) 
 		//.style.width="70px";
@@ -237,16 +216,18 @@ function generarNumeros() {
 	}
 }
 
-function eliminarIntro(){
+function eliminarIntro(){//elimina el div intro
 	elemento=document.getElementById('divStart');
 	elemento.parentNode.removeChild(elemento);
+
+	elemento=document.getElementById('divStart2');
+	elemento.parentNode.removeChild(elemento);
 }
-function AgregarLineaDeTexto(TextoLinea, divAgregar) {
+function AgregarLineaDeTexto(TextoLinea, divAgregar) {//mandas el Texto y el numero del Div al que va a modifical el usuario
 	document.getElementById("textoDiv" + divAgregar).innerHTML +=  TextoLinea;// Agrego nueva linea antes
 }
 
-function doLoad(){
-	// the timeout value should be the same as in the "refresh" meta-tag
+function doLoad(){//Timer para eliminar la pantalla negra de carga
 	setTimeout( "refresh()", 1000 );
 }
 
@@ -265,38 +246,45 @@ function muestra_oculta(id, ocultamuestra){
 		}
 	}
 }
-function timerSup(){
-	setTimeout( "timerOculta()", 500 );
+function timerSup(){// Timer para Ocultar los numeros a buscar
+	setTimeout( "timerOculta()", 800 );
 }
 
-function timerOculta(){
+function timerOculta(){//Complementa el de arriba, timerSup()
 	var ocultarActual = 1;
 	while(ocultarActual <= 7){
 		muestra_oculta("numeroDiv" + ocultarActual, false);
 		ocultarActual++;
 	}
 }
-function cambiarPuntuacion(puntos){
+function cambiarPuntuacion(puntos){//Cambia div de puntiacion
 	document.getElementById("puntuacion").innerHTML =  puntos;
 }
-window.onload = function(){/*hace que se cargue la función lo que predetermina que div estará oculto hasta llamar a la función nuevamente*/
-	muestra_oculta('contenido_a_mostrar');/* "contenido_a_mostrar" es el nombre de la etiqueta DIV que deseamos mostrar */
+function getPuntuacion(){//Obtienes la Puntuacion
+	return document.getElementById("puntuacion").innerHTML;
 }
 </script>
 
 
 </head>	
 <body>
-	<div style="width:700px; height:480px; max-width:700px; max-height:480px;">
-		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:101;">
+	<div style="width:700px; height:480px; max-width:700px; max-height:480px; font-family: DFPOP1-W9;"><!-- Chinacat  DFPOP1-W9-->
+		<div id="divCarga" class="JuegoTextoCls" style="background-color:black; z-index:500;">
 		</div>
 		<div id="divStart" class="divStartCls">
-			<div style="z-index:1; position: absolute; color:white; font-size:50px; text-align:center;">
-				<FONT FACE="arial">
-					Aqui Instrucciones.
-				</FONT>
+		</div>
+		<div id="divStart2" class="JuegoTextoCls" style="z-index: 101;">
+			<div style="z-index:1; position: absolute; color:white; font-size: 20px;" align="center">
+				<div style="padding-top: 10px;">
+					<font size="30px"><b>¿Listo para jugar?</b></font><br>
+					Es muy fácil, solo tienes que ver los números que aparecen arriba, ¡Tienes que memorizarlos rápido y escribirlos! ¡PORQUE DESAPARECEN!
+					Cada vez que escribas los números correctamente pasaras de nivel, ¡cada nivel vale 3 puntos! Si te equivocas perderás tu progreso.<BR>
+					¡EMPEZEMOS! 
+					<img src="./img/teclado.png" width="700" height="180" style="padding-top:25px;">
+
+				</div>
 			</div>
-			<div style="z-index:2; position: absolute; padding-top:300px; padding-left:260px;">
+			<div style="z-index:2; position: absolute; padding-top:380px; padding-left:260px;">
 				<img src="./img/boton.png" width="180" height="80" onClick="eliminarIntro(); ponerAncho(); generarNumeros(); iniciarF(); timerSup();" onLoad="doLoad();">
 			</div>
 		</div>
@@ -318,38 +306,17 @@ window.onload = function(){/*hace que se cargue la función lo que predetermina 
 			<div id="textoDiv6" class="divNumerosUsrCls"></div>
 			<div id="textoDiv7" class="divNumerosUsrCls"></div>
 		</div>
-		<div id="Mensaje" style="font-size:35px; z-index:3;padding-top:190px; position:absolute; width:700px;" align="center"></div>
+		<div id="Mensaje" style="font-size:33px; font-weight:bold; z-index:3;padding-top:190px; position:absolute; width:700px; color: #99F6FF;" align="center"></div>
 
-		<div class="JuegoTextoCls" style="z-index:3; padding-top:430px; font-size:40px;" align="right">
-			<img src="./img/Puntuacion.png" width="180" height="45" style="padding-right: 100px; z-index:8; display:inline-block;">
-			<div id="puntuacion" style="z-index:9; display:inline-block; padding-right:25px; ">0</div>
+		<div style="z-index: 3;padding-left: 320px; margin-top: 410px; position: absolute; font-size:50px;font-family: Chinacat; color: #99F6FF;">
+			Puntuaci&oacute;n:
+		</div>
+		<div id="puntuacion" style="z-index: 99;padding-left: 620px; margin-top: 420px; position: absolute; font-size: 50px;font-family: DFPOP1-W9; color: #99F6FF;" >
+			0
 		</div>
 		<div class="JuegoTextoCls" style="z-index:0;">
 			<img src="./img/fondo.png" width="700" height="480">
 		</div>
 	</div>
-
-
-
-<button id="showr">Show</button>
-<button id="hidr">Hide</button>
-
-<div style="background: #def3ca;
-    margin: 3px;
-    width: 80px;
-    display: none;
-    float: left;
-    text-align: center; ">
-
-	<div>Hello 3,</div>
-	<div>how</div>
-	<div>are</div>
-	<div>you?</div>
-</div>
-
-
-
-
-
 </body>
 </html>
